TOOLSを表示、プライバシーポリシーの表示位置を変更

--- a/layouts/partials/latests.html
+++ b/layouts/partials/latests.html
@@ -1,1 +1,18 @@
-
+<section class="sidebar">
+  <header>TOOLS</header>
+  <div>
+    <div class="articles sm">
+      <article class="lism">
+        <a href="https://featured-image-maker.zzzmisa.com/">
+          <div class="thumb thumb-eye-catch-maker"></div>
+          <div class="inner">
+            <div class="title">Eye Catch Maker</div>
+            <ul class="facts sm">
+              <li>アイキャッチ画像が簡単に作れるジェネレーター</li>
+            </ul>
+          </div>
+        </a>
+      </article>
+    </div>
+  </div>
+</section>
