--- a/layouts/_default/baseof.amp.html
+++ b/layouts/_default/baseof.amp.html
@@ -55,6 +55,7 @@
           <p>Powered by <a href="https://gohugo.io/">Hugo</a>.</p>
           <p><a href="https://github.com/dim0627/hugo_theme_robust">Robust</a> designed by <a href="http://yet.unresolved.xyz/">Daisuke Tsuji</a>.</p>
         </aside>
+        <p><a href="{{ .Site.BaseURL }}privacy/">プライバシーポリシー</a></p>
       </div>
     </footer>
 
