--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -47,6 +47,7 @@
           <p><a href="https://github.com/dim0627/hugo_theme_robust">Robust</a> designed by <a href="http://yet.unresolved.xyz/">Daisuke Tsuji</a>.</p>
         </aside>
         <p><a href="{{ .Site.BaseURL }}privacy/">プライバシーポリシー</a></p>
+        <p><a href="{{ .Site.BaseURL }}notice/">免責事項</a></p>
       </div>
     </footer>
 
