--- a/layouts/partials/latests.html
+++ b/layouts/partials/latests.html
@@ -1,5 +1,5 @@
 <section class="sidebar">
-  <header>TOOLS</header>
+  <header>PROJECTS</header>
   <div>
     <div class="articles sm">
       <article class="lism">
@@ -8,7 +8,18 @@
           <div class="inner">
             <div class="title">Eye Catch Maker</div>
             <ul class="facts sm">
-              <li>アイキャッチ画像が簡単に作れるジェネレーター</li>
+              <li>アイキャッチ画像作成ツール</li>
+            </ul>
+          </div>
+        </a>
+      </article>
+      <article class="lism">
+        <a href="https://featured-image-maker.zzzmisa.com/">
+          <div class="thumb thumb-curryjack"></div>
+          <div class="inner">
+            <div class="title">カレージャック</div>
+            <ul class="facts sm">
+              <li>オープンデータを使ったゲーム</li>
             </ul>
           </div>
         </a>
