カレージャックのアドレスが間違っていたいので修正

--- a/layouts/partials/latests.html
+++ b/layouts/partials/latests.html
@@ -14,7 +14,7 @@
         </a>
       </article>
       <article class="lism">
-        <a href="https://featured-image-maker.zzzmisa.com/">
+        <a href="https://curryjack.zzzmisa.com/">
           <div class="thumb thumb-curryjack"></div>
           <div class="inner">
             <div class="title">カレージャック</div>
