--- a/layouts/_default/summary.amp.html
+++ b/layouts/_default/summary.amp.html
@@ -1,15 +1,14 @@
 <article class="sn">
 
-  <div class="thumb thumb-{{ .UniqueID }}"></div>
+  <div class="thumb thumb-{{ .File.UniqueID }}"></div>
 
   <header class="article-header">
     <h1 class="title">{{ .Title }}</h1>
 
     <ul class="facts">
-	  <li><i class="fa fa-calendar" aria-hidden="true"></i><time datetime="{{ .Date.Format "2006-01-02T15:04:05JST" }}">{{ .Date.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}</time></li>
-      <li><i class="fa fa-refresh" aria-hidden="true"></i><time datetime="{{ .Lastmod.Format "2006-01-02T15:04:05JST" }}">{{ .Lastmod.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}</time></li>
-		
-      {{ with .Section }}<li><i class="fa fa-bookmark" aria-hidden="true"></i><a href="{{ $.Site.BaseURL }}{{ . | urlize }}/">{{ . | upper }}</a></li>{{ end }}
+      <li><i class="fas fa-calendar" aria-hidden="true"></i><time datetime="{{ .Date.Format "2006-01-02T15:04:05JST" }}">{{ .Date.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}</time></li>
+      {{ if ne .Date .Lastmod }}<li><i class="fas fa-sync" aria-hidden="true"></i><time datetime="{{ .Lastmod.Format "2006-01-02T15:04:05JST" }}">{{ .Lastmod.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}</time></li>{{ end }}
+      {{ with .Section }}<li><i class="fas fa-bookmark" aria-hidden="true"></i><a href="{{ $.Site.BaseURL }}{{ . | urlize }}/">{{ . | upper }}</a></li>{{ end }}
       {{ if eq (getenv "HUGO_ENV") "DEV" }}
       <li>{{ .WordCount }} Words</li>
       {{ if .IsDraft }}<li style="color: #2196f3;">DRAFT</li>{{ end }}
@@ -35,7 +34,7 @@
       <div>
         <nav class="crumb">
           <ol>
-            <li><a href="{{ .Site.BaseURL }}"><i class="fa fa-home" aria-hidden="true"></i>TOP</a></li>
+            <li><a href="{{ .Site.BaseURL }}"><i class="fas fa-home" aria-hidden="true"></i>TOP</a></li>
             {{ with .Section }}
             <li itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb"><a href="{{ $.Site.BaseURL }}{{ . | urlize }}/" itemprop="url"><span itemprop="title">{{ . | upper }}</span></a></li>
             {{ end }}
@@ -62,15 +61,14 @@
     </section>
     {{ end }}
     {{ end }}
-
-<amp-ad
-layout="responsive"
-width=300
-height=250
-type="adsense"
-data-ad-client="ca-pub-1954319019035310"
-data-ad-slot="3306381628">
-</amp-ad>
-
+    <amp-ad
+    layout="responsive"
+    width=300
+    height=250
+    type="adsense"
+    data-ad-client="ca-pub-1954319019035310"
+    data-ad-slot="3306381628">
+    </amp-ad>
   </footer>
+
 </article>
